--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,6 @@
   </welcome-file-list>
   
   <servlet>
-  
   	<servlet-name>UserController</servlet-name>
   	<servlet-class>Controller.UserController</servlet-class>
   </servlet>
@@ -21,6 +20,13 @@
   	<servlet-name>UserController</servlet-name>
   	<url-pattern>/userController</url-pattern>
   </servlet-mapping>
+  
+    <servlet-mapping>
+  	<servlet-name>UserController</servlet-name>
+  	<url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  
+  
   
     <servlet>
   
